--- a/src/components/App/Slider.css
+++ b/src/components/App/Slider.css
@@ -2,27 +2,44 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 50;
+  margin-top: 50px;
+  /* border-top: 10px solid gray; */
+  /* border-bottom: 10px solid gray; */
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
 }
-.next {
-  padding: 20px;
-  font-size: 1rem;
-  background-color: cadetblue;
-  margin: 20px;
-  border: none;
-  border-radius: 20px;
-}
-.previous {
-  padding: 20px;
-  font-size: 1rem;
-  background-color: cadetblue;
-  margin: 20px;
-  border: none;
-  border-radius: 20px;
-}
+
 .content {
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-  transition:  5s ease-in-out;
+  position: relative;
+  width: 400px; /* Adjust width as needed */
+  height: 400px; /* Adjust height as needed */
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+img.active {
+  opacity: 1;
+}
+
+.previous, .next {
+  background-color: darkolivegreen;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 0 10px; /* Adjust the margin to place the buttons closer to the image */
 }
